--- a/styles.css
+++ b/styles.css
@@ -80,10 +80,21 @@ body {
   text-align: center;
   padding: 150px 20px;
   position: relative;
-  background-color: rgba(244, 235, 235, 0.595); 
+  background-color: rgba(244, 235, 235, 0.726); 
   margin-bottom: 10px;
-  z-index: 2;
+  z-index: 1;
+  position: relative;
 
+}
+.hero::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(244, 235, 235, 0.434);  
+  z-index: 1;
 }
 
 
@@ -92,18 +103,19 @@ body {
 .hero h1 {
   font-size: 48px;
   z-index: 2;
-  color: #ff9800; /* Change text color on hover */
-
-
+  color: black; /* Change text color on hover */
+  position: relative;
 }
 
 .hero p {
   font-size: 22px;
   z-index: 2;
+  position: relative;
 
 }
 
 .cta-btn {
+  position: relative;
   margin-top: 10px;
   background-color: #ff7f50;
   padding: 12px 25px;
